# go

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
src/: FastBoard.cpp  FastBoard.h  FastState.cpp  FastState.h  FullBoard.cpp  FullBoard.h  Random.cpp  Random.h  Utils.cpp  Utils.h  Zobrist.cpp  Zobrist.h  config.h  fast_board.cpp  fast_state.cpp  fast_state.h  full_board.cpp  full_board.h  game_engine.cpp  random.cpp  thread_pool.h  utils.cpp  utils.h  zobrist.cpp  zobrist.h
tests/: test_go_play.py
